--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #1d2634;
+    background-color:  #1d2634;;
     color: #9e9e9e;
     font-family: 'Times New Roman', Times, serif;
 
@@ -18,19 +18,29 @@ body{
 }
 
 /* HEADER */
+
 .header{
     grid-area: header;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 30px 0 30px;
-    box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 1rem 2rem; 
+    border-bottom: 1px solid rgba(0, 0, 0, 0.35);
+    width: 100vh;
 
 }
-.menu-icon{
-    display: none;
+.header-left, header-right{
+    display: flex;
+    align-items: center; 
+    
 }
+.icon{
+    font-size: 1.5rem;
+    margin: 2rem;
+    cursor: pointer;
+}
+
+
 
 /* END HEADER */
 
@@ -51,10 +61,55 @@ body{
     padding: 15px 30px 0px 30px;
     margin-bottom: 30px;
 }
+.sidebar-title>span{
+    display: none;
 
+}
+.sidebar-brand{
+    margin-top: 15px;
+    font-size: 20px;
+    font-weight: 700;
+
+}
+.sidebar-list{
+    padding: 0;
+    list-style-type: none;
+
+}
+.sidebar-list-item{
+    padding: 20px;
+    font-size: 18px;
+
+}
+.sidebar-list-item:hover{
+    background-color: rgba(250, 250, 250, 0.2);
+    cursor: pointer;
+}
+.sidebar-list-item>a{
+    text-decoration: none;
+    color: #9e9ea4;
+    font-size: 1.5rem;
+
+}
+.sidebar-responsive{
+    display: inline !important;
+    position: absolute;
+    z-index: 12 !important;
+}
 
 
 
 /* END SIDEBAR */
 
+/* MAIN */
+
+.main-contener{
+    grid-area: main;
+    overflow-y: auto;
+    padding: 20px 20px;
+    color: rgba(255, 255, 255, alpha)
+
+}
+
+/* MAIN END */
 
